<?xml version="1.0"?>
<package format="2">

  <name>gazebo_tf_injector</name>
  <version>0.1.0</version>
  <description>Inject ROS TF link poses into Gazebo models</description>
  <url type="website">https://github.com/acschaefer/gazebo_tf_injector</url>
  <license>MIT</license>
  
  <maintainer email="aschaefer@nvidia.com">Alexander Schaefer</maintainer>
  <author email="aschaefer@nvidia.com">Alexander Schaefer</author>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
